# git-full-commit

./: AGENTS.md  Cargo.toml  GEMINI.md  README.md
.github/workflows/: release.yml  rust.yml
scripts/: release.sh
spec/: commit_input_view.md  commit_log_view.md  diff_view.md  discard_operations.md  ignore_operations.md  main_screen.md  pane_switching.md  screen_switching.md  stage_operations.md  undo_redo_operations.md  unstage_operations.md  unstage_screen.md
src/: app_state.rs  background.rs  command.rs  commit_storage.rs  cursor_state.rs  external_command.rs  git.rs  git_patch.rs  lib.rs  main.rs  ui.rs  util.rs
src/command/: apply_patch.rs  apply_patch_command_test.rs  checkout_file.rs  checkout_file_command_test.rs  delete_untracked_file.rs  discard_commit.rs  discard_file.rs  discard_hunk.rs  discard_unstaged_hunk.rs  fixup_commit.rs  fixup_commit_test.rs  ignore_file.rs  ignore_unstaged_tracked_file.rs  ignore_untracked_file.rs  mod.rs  remove_file.rs  reorder_commits.rs  reorder_commits_command_test.rs  stage_all.rs  stage_all_command_test.rs  stage_file.rs  stage_file_command_test.rs  stage_patch.rs  stage_patch_command_test.rs  stage_unstaged.rs  stage_unstaged_command_test.rs  stage_untracked.rs  stage_untracked_command_test.rs  swap_commit.rs  test_helpers.rs  unstage_all.rs  unstage_all_command_test.rs  unstage_file.rs  unstage_file_command_test.rs
src/ui/: color.rs  commit_view.rs  diff_view.rs  keyboard.rs  main_screen.rs  render.rs  scroll.rs  unstaged_screen.rs  update.rs  (+2 more)
tests/: discard_test.rs  git_patch_test.rs  git_test.rs  main_test.rs
(+31 files in other folders)
