[package]
name = "git-reset-pp"
version = "0.1.0"
edition = "2024"

[dependencies]
unicode-width = "0.1.10"
pancurses = "0.17.0"
similar = "2.7.0"
clap = { version = "4.5.11", features = ["derive"] }
anyhow = "1.0.86"
syntect = "5.2.0"
lazy_static = "1.5.0"
dirs = "5.0.1"

[dev-dependencies]
serial_test = "2.0.0"

tempfile = "3.22.0"
