[package]
name = "git-full-commit"
version = "2.1.2"
edition = "2024"
license = "MIT"

[dependencies]
unicode-width = "0.2.1"
pancurses = "0.17.0"
similar = { version = "2.7.0", features = ["inline", "unicode"] }
clap = { version = "4.5.11", features = ["derive"] }
anyhow = "1.0.86"
lazy_static = "1.5.0"
dirs = "6.0.0"
regex = "1"
chrono = "0.4.42"

[dev-dependencies]
serial_test = "2.0.0"
tempfile = "3.22.0"
rand = "0.8.5"

